using Microsoft.AspNetCore.Identity;

namespace CarparkManagementSystem.Models;

public class ApplicationUser : IdentityUser
{
}
